# homeassistant-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  conftest.py  pyproject.toml  rustfmt.toml
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: configuration.yaml
crates/ha-api/: Cargo.toml
crates/ha-api/src/: auth.rs  config_flow.rs  frontend.rs  lib.rs  manifest.rs  persistent_notification.rs  translations.rs  websocket.rs
crates/ha-api/src/websocket/: connection.rs  dispatch.rs  handlers.rs  mod.rs  types.rs
crates/ha-automation/: Cargo.toml
crates/ha-automation/src/: automation.rs  condition.rs  eval.rs  lib.rs  trigger.rs  trigger_eval.rs
crates/ha-automation/tests/: compat_test.rs
crates/ha-components/: Cargo.toml
crates/ha-components/src/: input_helpers.rs  lib.rs  system_log.rs
crates/ha-config/: Cargo.toml
crates/ha-config-entries/: Cargo.toml
crates/ha-config-entries/src/: entry.rs  lib.rs  manager.rs  state_machine.rs
crates/ha-config/src/: core_config.rs  error.rs  lib.rs  loader.rs  secrets.rs
crates/ha-core/: Cargo.toml
crates/ha-core-rs/: Cargo.toml
crates/ha-core-rs/src/: lib.rs
crates/ha-core-rs/src/extension/: py_floor_registry.rs  py_storage.rs  py_template.rs
crates/ha-core-rs/src/fallback/: config_entry.rs  hass_wrapper.rs  integration.rs  mod.rs  pyclass_wrappers.rs  runtime.rs  service_bridge.rs
crates/ha-core-rs/src/py_bridge/: errors.rs
crates/ha-core/src/: context.rs  domains.rs  entity_id.rs  event.rs  lib.rs  service_call.rs  state.rs
crates/ha-event-bus/: Cargo.toml
crates/ha-event-bus/src/: lib.rs
crates/ha-py-bridge/: Cargo.toml  ha_python_integration_allowlist.yaml.example  pyproject.toml
crates/ha-py-bridge/python/homeassistant/: __init__.py  _module_registry.py  _native_loader.py  config_entries.py  const.py  core.py  exceptions.py
crates/ha-py-bridge/python/homeassistant/components/: __init__.py
crates/ha-py-bridge/python/homeassistant/components/light/: __init__.py
crates/ha-py-bridge/python/homeassistant/components/sensor/: __init__.py
crates/ha-py-bridge/python/homeassistant/components/switch/: __init__.py
crates/ha-py-bridge/python/homeassistant/helpers/: __init__.py  area_registry.py  condition.py  device_registry.py  entity.py  entity_registry.py  floor_registry.py  label_registry.py  storage.py  template.py  trigger.py  typing.py
crates/ha-py-bridge/python/homeassistant/helpers/template/: __init__.py
crates/ha-py-bridge/python/homeassistant/util/: __init__.py
crates/ha-py-bridge/python/tests/: test_hass_wrapper.py  test_integration_smoke.py  test_shim_completeness.py  test_shim_isolation.py  test_shimmed_modules_registry.py
crates/ha-py-bridge/src/: lib.rs
crates/ha-py-bridge/src/extension/: mod.rs  py_area_registry.rs  py_condition.rs  py_config_entries.rs  py_device_registry.rs  py_entity_registry.rs  py_event_bus.rs  py_floor_registry.rs  py_home_assistant.rs  py_label_registry.rs  py_service_registry.rs  py_state_machine.rs  py_template.rs  py_trigger.rs  py_types.rs
crates/ha-py-bridge/src/py_bridge/: async_bridge.rs  config_entry.rs  config_flow.rs  errors.rs  hass_wrapper.rs  integration.rs  mod.rs  py_utils.rs  pyclass_wrappers.rs  requirements.rs  runtime.rs  service_bridge.rs
crates/ha-py-bridge/src/py_bridge/wrappers/: auth.rs  bus.rs  config.rs  config_entry.rs  hass.rs  mod.rs  registries.rs  services.rs  states.rs  unit_system.rs  util.rs
crates/ha-python-bridge/: Cargo.toml
crates/ha-python-bridge/src/: lib.rs
crates/ha-python-bridge/src/extension/: mod.rs  py_area_registry.rs  py_automation.rs  py_config_entries.rs  py_device_registry.rs  py_entity_registry.rs  py_event_bus.rs  py_floor_registry.rs  py_home_assistant.rs  py_label_registry.rs  py_service_registry.rs  py_state_machine.rs  py_template.rs  py_trigger.rs  py_types.rs
crates/ha-python-bridge/src/fallback/: async_bridge.rs  errors.rs  integration.rs  mod.rs  runtime.rs  service_bridge.rs
crates/ha-recorder/: Cargo.toml
crates/ha-registries/: Cargo.toml
crates/ha-registries/src/: area_registry.rs  device_registry.rs  entity_registry.rs  floor_registry.rs  label_registry.rs  lib.rs  storage.rs
crates/ha-script/: Cargo.toml
crates/ha-script/src/: action.rs  executor.rs  lib.rs  script.rs
crates/ha-script/tests/: compat_test.rs
crates/ha-server/: Cargo.toml  build.rs
crates/ha-server/src/: automation_engine.rs  main.rs
crates/ha-service-registry/: Cargo.toml
crates/ha-service-registry/src/: lib.rs
crates/ha-state-machine/: Cargo.toml
crates/ha-state-machine/src/: lib.rs
crates/ha-state-store/: Cargo.toml
crates/ha-state-store/src/: lib.rs
crates/ha-template/: Cargo.toml
crates/ha-template/src/: engine.rs  error.rs  filters.rs  globals.rs  lib.rs  states.rs
crates/ha-template/tests/: comprehensive_tests.rs  edge_cases.rs  filter_tests.rs  math_tests.rs  mod.rs  state_tests.rs  time_tests.rs  type_tests.rs  utility_tests.rs
crates/ha-test-comparison/: Cargo.toml
crates/ha-test-comparison/src/: client.rs  compare.rs  config.rs  harness.rs  lib.rs  ws_client.rs
crates/ha-test-comparison/tests/: comparison.rs
docs/: performance-optimization-log.md
docs/plans/: auto-install-integration-dependencies.md  code-review-fixes.md
python/homeassistant/: __init__.py  _native_loader.py  core_config.py
python/tests/: test_shim_isolation.py
scripts/: lint-alpha.py
tests/: Makefile  test_config_flow_ws.py  test_demo_integration.py  test_google_oauth_flow.py
tests/common/: fixtures.rs  mock_config_entry.rs  mock_entity.rs  mock_storage.rs  mod.rs  test_hass.rs  time.rs
tests/comparison/: README.md  docker-compose.yml  ha-versions.toml  setup-ha-test.sh
tests/config/: configuration.yaml  ha_python_integration_allowlist.yaml
tests/ha_compat/: README.md  __init__.py  conftest.py  run_ha_tests.py  run_tests.py  setup.sh  test_suites.yaml
tests/integration/: __init__.py  conftest.py  conftest_ha_override.py  run_tests.py  test_application_credentials_ws.py  test_device_registry_ws.py  (+3 more)
(+11 files in other folders)
