[workspace]
resolver = "2"
members = [
    "crates/ha-api",
    "crates/ha-automation",
    "crates/ha-components",
    "crates/ha-config",
    "crates/ha-config-entries",
    "crates/ha-core",
    "crates/ha-event-bus",
    "crates/ha-py-bridge",
    "crates/ha-recorder",
    "crates/ha-registries",
    "crates/ha-script",
    "crates/ha-server",
    "crates/ha-service-registry",
    "crates/ha-state-store",
    "crates/ha-template",
    "crates/ha-test-comparison",
]

[workspace.package]
# Version scheme: {HA_VERSION} (tracking Home Assistant version)
# Currently tracking Home Assistant 2026.1.1
# See tests/comparison/ha-versions.toml for full version tracking
# Python wheel version in pyproject.toml uses PEP 440 post-release for patches
version = "2026.1.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/yon/homeassistant-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Templates
minijinja = { version = "2.0", features = ["loader"] }

# Python bridge
pyo3 = { version = "0.22", features = ["auto-initialize"] }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Concurrent data structures
dashmap = "6.0"
indexmap = { version = "2.7", features = ["serde"] }

# IDs and time
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.1"

# Schema validation
jsonschema = "0.18"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Testing
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10"
tokio-test = "0.4"

# Workspace crates
ha-api = { path = "crates/ha-api" }
ha-automation = { path = "crates/ha-automation" }
ha-components = { path = "crates/ha-components" }
ha-config = { path = "crates/ha-config" }
ha-config-entries = { path = "crates/ha-config-entries" }
ha-core = { path = "crates/ha-core" }
ha-event-bus = { path = "crates/ha-event-bus" }
ha-py-bridge = { path = "crates/ha-py-bridge" }
ha-recorder = { path = "crates/ha-recorder" }
ha-registries = { path = "crates/ha-registries" }
ha-script = { path = "crates/ha-script" }
ha-server = { path = "crates/ha-server" }
ha-service-registry = { path = "crates/ha-service-registry" }
ha-state-store = { path = "crates/ha-state-store" }
ha-template = { path = "crates/ha-template" }
