[package]
name = "ha-api"
description = "Home Assistant REST and WebSocket API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }
ha-config = { workspace = true }
ha-event-bus = { workspace = true }
ha-state-machine = { workspace = true }
ha-service-registry = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
dashmap = { workspace = true }
