[package]
name = "ha-api"
description = "Home Assistant REST and WebSocket API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-config = { workspace = true }
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-service-registry = { workspace = true }
ha-state-machine = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["fs", "set-header"] }

# Async
futures = "0.3"
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
dashmap = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
