[package]
name = "ha-automation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-service-registry = { workspace = true }
ha-state-store = { workspace = true }
ha-template = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "time"] }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# Logging
tracing = { workspace = true }

# IDs
ulid = { workspace = true }

# Regex for condition matching
regex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
