[package]
name = "ha-config-entries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }
ha-registries = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# IDs and time
ulid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.10"
