[package]
name = "ha-config-entries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }
ha-registries = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }

# IDs and time
chrono = { workspace = true }
ulid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Random (for retry jitter)
rand = "0.8"

# Async
tokio = { workspace = true, features = ["sync"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = { workspace = true }
