[package]
name = "ha-core-rs"
description = "Home Assistant core in Rust - PyO3 bridge for extension and embedded modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "ha_core_rs"
# Use only rlib by default. For Python extension (cdylib), use `maturin build`.
crate-type = ["rlib"]

[features]
default = ["extension"]
# Mode 1: Build as Python extension module (Rust → Python)
extension = ["dep:pyo3", "pyo3/extension-module"]
# Mode 2: Embed Python interpreter for fallback (Python → Rust)
fallback = ["dep:pyo3", "pyo3/auto-initialize"]

[dependencies]
chrono = { workspace = true }
ha-automation = { workspace = true }
ha-config-entries = { workspace = true }
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-registries = { workspace = true }
ha-service-registry = { workspace = true }
ha-state-machine = { workspace = true }
ha-template = { workspace = true }
minijinja = { workspace = true }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
