[package]
name = "ha-python-bridge"
description = "PyO3 bidirectional bridge for Home Assistant - supports both extension and embedded modes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "ha_core_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension"]
# Mode 1: Build as Python extension module (Rust → Python)
extension = ["pyo3/extension-module"]
# Mode 2: Embed Python interpreter for fallback (Python → Rust)
fallback = []

[dependencies]
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-state-machine = { workspace = true }
ha-service-registry = { workspace = true }
pyo3 = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
