[package]
name = "ha-registries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }
indexmap = { workspace = true }

# IDs and time
chrono = { workspace = true }
ulid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true, features = ["fs", "sync"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = { workspace = true }
