[package]
name = "ha-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-state-machine = { workspace = true }
ha-service-registry = { workspace = true }
ha-template = { workspace = true }
ha-automation = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "time"] }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
