[package]
name = "ha-server"
description = "Home Assistant Rust server - main binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "homeassistant"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ha-api = { path = "../ha-api" }
ha-automation = { workspace = true }
ha-config = { workspace = true }
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-script = { workspace = true }
ha-service-registry = { workspace = true }
ha-state-machine = { workspace = true }
ha-template = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
