[package]
name = "ha-server"
description = "Home Assistant Rust server - main binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "homeassistant"
path = "src/main.rs"

[features]
default = []
# Enable Python bridge for running Python integrations
python = ["dep:ha-py-bridge", "dep:pyo3-build-config"]

[dependencies]
anyhow = { workspace = true }
ha-api = { path = "../ha-api" }
ha-automation = { workspace = true }
ha-config = { workspace = true }
ha-config-entries = { workspace = true }
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-py-bridge = { path = "../ha-py-bridge", default-features = false, features = ["py_bridge"], optional = true }
ha-registries = { workspace = true }
ha-script = { workspace = true }
ha-service-registry = { workspace = true }
ha-state-machine = { workspace = true }
ha-template = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ulid = { workspace = true }

[build-dependencies]
pyo3-build-config = { version = "0.22", optional = true }

[dev-dependencies]
tempfile = "3.10"
