[package]
name = "ha-service-registry"
description = "Service registry with async handlers for Home Assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dashmap = { workspace = true }
ha-core = { workspace = true }
jsonschema = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
