[package]
name = "ha-state-machine"
description = "State machine with domain indexing for Home Assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
