[package]
name = "ha-state-store"
description = "Entity state storage with domain indexing for Home Assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dashmap = { workspace = true }
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
