[package]
name = "ha-template"
description = "Jinja2-compatible template engine for Home Assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono = { workspace = true }
ha-core = { workspace = true }
ha-event-bus = { workspace = true }
ha-state-store = { workspace = true }
minijinja = { workspace = true }
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
slug = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
ha-event-bus = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
