[package]
name = "ha-test-comparison"
description = "API comparison tests against Python Home Assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[[test]]
name = "comparison"
path = "tests/comparison.rs"
