[package]
name = "ha-test-comparison"
description = "API comparison tests against Python Home Assistant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# HTTP client
reqwest = { workspace = true }

# WebSocket client
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Async
tokio = { workspace = true, features = ["time"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

[[test]]
name = "comparison"
path = "tests/comparison.rs"
